[HT-478] Fix spark.sql.warehouse.dir to point to default hdfs:///hive since Hive is always enabled and will be the main metastore at all time. Refactor all test case to support new log4j configurations.